# clown

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/cli/: __init__.py  chat.py  main.py
clown_agent/: __init__.py  engine.py  loop.py  session_state.py  tool_invocation.py  tool_runner.py  types.py
clown_core/: __init__.py  exceptions.py  paths.py  settings.py
clown_llm/: __init__.py  base.py
clown_llm/providers/: __init__.py  local_echo.py
clown_security/: __init__.py  command_policy.py
clown_storage/: __init__.py
clown_storage/local/: __init__.py  transcript_store.py
clown_tools/: __init__.py  base.py  registry.py
clown_tools/file/: __init__.py  append.py  common.py  diff_preview.py  edit.py  glob_search.py  grep_search.py  read.py  write.py
clown_tools/shell/: __init__.py  exec.py
tests/: test_editing_workflows.py  test_file_approval.py  test_file_tools.py  test_local_planner.py  test_settings.py  test_shell_tool.py  test_tool_invocation.py
